/*
 * $Id: ChangeLog,v 1.5925 2008/02/18 16:32:07 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:M   * UTC[-|+]hhm   * Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-02-18 19:45 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbdefs.h
    ! Restored HARBOUR_START_PROCEDURE under MinGW - even if some versions
      don't need it, other versions do.

2008-02-18 11:50 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/genc.c
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
    * Minor refinments and corrections.
    + Added support for Namespace Function as application startup function

2008-02-18 03:35 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/compiler/harbour.c
    ! Restored symbol registration for __DBGENTRY.

2008-02-16 20:15 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tget.prg
    + create the new "@2" and "@4" pictures to force get date with 2 or 4
      digits on year format, independent of set century. Contribution
      by Brian Hays.

2008-02-16 14:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/tbrowse.prg
    ! fixed SetStyle() method. Reported by Eduardo Horbino.
    + created Style access to return ::aStyle data.

  * source/rtl/tget.prg
  * source/rtl/tgetlist.prg
    + created the new "@L" picture to scroll number from right to left
      direction as calculator. This picture will acts only over numeric vars.
      NumToLeft() code used in get class is a contrib by Julio Cesar Molina.

      Note about navigation and editing keys under "@L" picture:
      Right, Left, Ctrl-Right, Ctrl-Left, Home, End, Ctrl-Home, Ctrl-End and
      Ctrl-BackSpc are without effect.
      Del,BackSpc  Delete character at cursor position, but clear all
                   text if the first key is Del.

2008-02-16 10:30 UTC-0430 Ron Pinkas <ron/at/xharbour.com>